--- a/layout1.html
+++ b/layout1.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style1.css">
-    <title>Layout 1 (ALLANIC)</title>
+    <link rel="stylesheet" href="css1.css">
+    <title>Layout 1</title>
 </head>
 
 <body>
