--- a/layout2.html
+++ b/layout2.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style1.css">
-    <title>Layout 1 (ALLANIC)</title>
+    <link rel="stylesheet" href="css2.css">
+    <title>Layout2</title>
 </head>
-
 <body>
     <header>Header</header>
     <nav>Navigation Menu</nav>
-    <section>Content</section>
+    <main>
+        <aside>Content A</aside>
+        <aside>Content B</aside>
+    </main>
+        
     <footer>Footer</footer>
 </body>
-
 </html>
